# scss_hw1

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  artifact.bundle  artifact.md  bandit-final.txt  bandit-initial.txt  bandit-output.txt  cert.pem  cyclonedx-sbom.json  main.py  merkle_proof.py  personal.txt  pylint.final.txt  pylint.initial.txt  pyproject.toml  sbom-attestation.json  util.py
.github/workflows/: cd.yml  ci.yml  scorecard.yml
assignment2/: bandit-final.txt  mypy.initial.txt  ruff.initial.txt
rekor_scss/: main.py  merkle_proof.py  util.py
tests/: test_rekor_monitor.py
