[project]
name = "scss"
version = "0.1.0"
description = ""
authors = [
    {name = "Sanchit Sahay",email = "sanchitsahay.tech@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "cryptography (>=46.0.3,<47.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)",
    "ruff (>=0.14.4,<0.15.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pylint (>=4.0.2,<5.0.0)",
    "bandit (>=1.8.6,<2.0.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "jsonschema (>=4.25.1,<5.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
