[tool.poetry]
name = "rekor_scss"
version = "0.1.1"
description = "Rekor monitoring tool"
authors = [
     "Sanchit Sahay <sanchitsahay.tech@gmail.com>"
]
license = "MIT"
readme = "README.md"
packages = [
	{ include = "rekor_scss" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = ">=2.32.5,<3.0.0"
cryptography= ">=46.0.3,<47.0.0"
cyclonedx-bom = "^7.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.18.2,<2.0.0"
ruff = ">=0.14.4,<0.15.0"
flake8 = ">=7.3.0,<8.0.0"
pylint = ">=4.0.2,<5.0.0"
bandit = ">=1.8.6,<2.0.0"
pytest = ">=9.0.0,<10.0.0"
jsonschema = ">=4.25.1,<5.0.0"
pytest-cov = ">=7.0.0,<8.0.0"
black = "^25.12.0"

[tool.poetry.scripts]
rekor_scss = "rekor_scss.main:main"
